--- a/WebRoot/signup.html
+++ b/WebRoot/signup.html
@@ -2,25 +2,25 @@
     <fieldset>
         <legend>用户注册</legend>
         <div class="form-group">
-            <label for="sign-username">姓名:</label>
-            <span class="text-danger" id="sign-username-error" style="display: none">用户名应该在5-15位之间</span>
+            <label for="sign-username">用户名:</label>
+            <span class="text-danger" id="sign-username-error" style="display: none">户名应该在5-15位之间</span>
             <input type="text" id="sign-username"
-                   name="username" placeholder="请输入注册的用户名"
+                   name="username" placeholder="输入用户名"
                    class="form-control" required="true">
         </div>
         <div class="form-group">
             <label for="sign-password">密码:</label>
             <span class="text-danger" id="sign-password-error" style="display: none">密码长度不应该小于六位</span>
-            <input type="password" id="sign-password" name="password" placeholder="请输入密码" class="form-control" required="true" >
+            <input type="password" id="sign-password" name="password" placeholder="请输入密码"  class="form-control" required="required" >
         </div>
         <div class="form-group">
             <label for="sign-age">年龄:</label>
-            <input type="number" id="sign-age" name="age" class="form-control" placeholder="请输入年龄" min="5" max="100" required="true">
+            <input type="number" id="sign-age" name="age" class="form-control" placeholder="年龄"  min="5" max="100" required="required">
         </div>
         <div class="form-group">
             <label for="sign-email">E-mail:</label>
             <span class="text-danger" id="sign-email-error" style="display: none">邮件格式不正确</span>
-            <input type="email" id="sign-email" name="email" class="form-control" placeholder="请输入E-mail" required="true">
+            <input type="email" id="sign-email" name="email" class="form-control" placeholder="请输入E-mail" required="required">
         </div>
 
         <br/>
@@ -63,7 +63,7 @@
                }
                $("#sign-email-error").css("display","none");
                var email=$("#sign-email").val();
-               if(!/^[a-z]([a-z0-9]*[-_]?[a-z0-9]+)*@([a-z0-9]*[-_]?[a-z0-9]+)+[\.][a-z]{2,3}([\.][a-z]{2})?$/.test(email)){
+               if(!/^[a-z0-9]([a-z0-9]*[-_]?[a-z0-9]+)*@([a-z0-9]*[-_]?[a-z0-9]+)+[\.][a-z]{2,3}([\.][a-z]{2})?$/.test(email)){
                    $("#sign-email-error").css("display","inline");
                    $(this).parent().addClass("has-error");
                    $(this).focus();
