--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -1,194 +1,201 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>电影搜索</title>
-    <meta charset="utf-8">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <style>
-        body, h1, h2, h3, h4, p, div,legend {
-            font-family: "微软雅黑";
-        }
-    </style>
-    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/RSA.js"></script>
-    <script type="text/javascript" src="js/BigInt.js"></script>
-    <script type="text/javascript" src="js/Barrett.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+<title>电影搜索</title>
+<meta charset="utf-8">
+<link href="css/bootstrap.css" rel="stylesheet">
+<style>
+body,h1,h2,h3,h4,p,div,legend {
+	font-family: "微软雅黑";
+}
+</style>
+<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/RSA.js"></script>
+<script type="text/javascript" src="js/BigInt.js"></script>
+<script type="text/javascript" src="js/Barrett.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 
 <body style="background: #dcddcd">
-<div class="navbar navbar-fixed-top"
-     style="background:rgba(255, 255, 255, 0.5)">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <h2><a href="index.html">电影搜索推荐</a></h2>
-            </div>
-            <div class="col-md-6">
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav top-nav">
+	<div class="navbar navbar-fixed-top"
+		style="background:rgba(255, 255, 255, 0.5)">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<h2>
+						<a href="index.html">电影搜索推荐</a>
+					</h2>
+				</div>
+				<div class="col-md-6">
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav top-nav">
 
-                    </ul>
-                </div>
-            </div>
-            <div class="navbar-form navbar-right">
-                <form>
-                    <div class="form-group">
-                        <input type=button value="登录" data-toggle="modal" data-target="#loginModal" id="login"
-                               class="form-control"></div>
-                    <div class="form-group">
-                        <input type=button value="注册" id="signUp"
-                               class="form-control"></div>
-                    <div class="form-group">
-                        <input type=button value="管理员" id="admin"
-                               class="form-control"></div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="col-xs-12" id="page" style="position: relative">
+						</ul>
+					</div>
+				</div>
+				<div class="navbar-form navbar-right">
+					<form>
+						<div class="form-group">
+							<input type=button value="登录" data-toggle="modal"
+								data-target="#loginModal" id="login" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type=button value="注册" id="signUp" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type=button value="管理员" id="admin" class="form-control">
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="col-xs-12" id="page" style="position: relative">
 
-        <div class="container" style="position:relative;margin-top: 50px;min-height: 550px;" id="main">
-            <h2 class="text-center">搜索</h2>
+			<div class="container"
+				style="position:relative;margin-top: 50px;min-height: 550px;"
+				id="main">
+				<h2 class="text-center">搜索</h2>
 
-            <div class="input-group">
-                <input type="search" id="text" name="q" class="form-control"
-                       autocomplete="on" value="" placeholder="搜索">
+				<div class="input-group">
+					<input type="search" id="text" name="q" class="form-control"
+						autocomplete="on" value="" placeholder="搜索">
 
-                <div class="input-group-btn">
-                    <button type="button" class="btn btn-default" id="search">电影搜索</button>
-                </div>
-            </div>
-            <div id="list" class="list">
-                <div id="result"></div>
-                <div id="info"></div>
-            </div>
-        </div>
-        <!--/span-->
-    </div>
-</div>
-<footer style="text-align: center;">
-    <p>&copy; 白强 2014.All rights reserved</p>
-</footer>
-<!-- Modal -->
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">用户登录</h4>
-            </div>
-            <div class="modal-body">
-                <input type="text" class="form-control" id="username" placeholder="用户名">
+					<div class="input-group-btn">
+						<button type="button" class="btn btn-default" id="search">电影搜索</button>
+					</div>
+				</div>
+				<div id="list" class="list">
+					<div id="result"></div>
+					<div id="info"></div>
+				</div>
+			</div>
+			<!--/span-->
+		</div>
+	</div>
+	<footer style="text-align: center;">
+		<p>&copy; 白强 2014.All rights reserved</p>
+	</footer>
+	<!-- Modal -->
+	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog"
+		aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title" id="myModalLabel">用户登录</h4>
+				</div>
+				<div class="modal-body">
+					<input type="text" class="form-control" id="username"
+						placeholder="用户名"> <input type="password"
+						class="form-control" id="password" placeholder="密码">
+				</div>
+				<div class="modal-footer">
+					<span class="text-danger" id="error"></span>
+					<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+					<button type="button" id="submit" class="btn btn-primary">登录</button>
+				</div>
+			</div>
+			<!-- /.modal-content -->
+		</div>
+		<!-- /.modal-dialog -->
+	</div>
+	<!-- /.modal -->
+	<script type="text/javascript">
+		var rsa_n;
+		$(document).ready(function() {
+			$("#login").click(function() {
+				$.get("key.do", function(data) {
+					rsa_n = data;
+					console.log("Data Loaded: " + data);
+				});
+			});
+			$("#admin").click(function() {
+				location.href = "admin.html";
+			});
+			$("#signUp").click(function() {
+				$("#main").animate({
+					left : -200,
+					opacity : 0
+				}, "slow");
+				setTimeout(function() {
+					$.get("signup.html", function(data) {
+						$(data).appendTo("#page");
+						$("#sign").animate({
+							left : -100,
+							opacity : 1
+						}, "slow");
+					});
 
-                <input type="password" class="form-control" id="password" placeholder="密码">
-            </div>
-            <div class="modal-footer">
-                <span class="text-danger">密码错误</span>
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" id="submit" class="btn btn-primary">登录</button>
-            </div>
-        </div>
-        <!-- /.modal-content -->
-    </div>
-    <!-- /.modal-dialog -->
-</div>
-<!-- /.modal -->
-<script type="text/javascript">
-    var rsa_n;
-    $(document).ready(function () {
-        $("#login").click(function () {
-            $.get("json/key.txt", function (data) {
-                rsa_n = data;
-                console.log("Data Loaded: " + data);
-            });
-        });
-        $("#admin").click(function () {
-            location.href="admin.html";
-        });
-        $("#signUp").click(function () {
-            $("#main").animate({ left: -200, opacity: 0 }, "slow");
-            setTimeout(function () {
-                $.get("signup.html", function (data) {
-                    $(data).appendTo("#page");
-                    $("#sign").animate({ left: -100, opacity: 1 }, "slow");
-                });
+				}, 500);
+			});
+			$("#submit").click(function() {
+				setMaxDigits(131); //131 => n的十六进制位数/2+3
+				var key = new RSAKeyPair("10001", '', rsa_n); //10001 => e的十六进制
+				var password = $("#password").val();
+				password = encryptedString(key, password); //不支持汉字
+				$.post("login.do", {
+					name : $("#username").val(),
+					password : password
+				}, function(data) {
+					if (data == "user") {
+						location.href = "user.jsp";
+					} else {
+						$("#error").html(data);
+					}
+				});
 
-            }, 500);
-        });
-        $("#submit").click(function () {
-            setMaxDigits(131); //131 => n的十六进制位数/2+3
-            var key = new RSAKeyPair("10001", '', rsa_n); //10001 => e的十六进制
-            var password = $("#password").val();
-            password = encryptedString(key, password); //不支持汉字
-            console.log(password); //test
-            $.post("login.do", { name: $("#username").val(), password: password },
-                    function (data) {
-                        alert("Data Loaded:   " + data);
-                    }
-            );
+			});
 
-        });
+			$("#search").click(function() {
+				$('#result').html('');
+				search();
+			});
 
-        $("#search").click(function () {
-            $('#result').html('');
-            search();
-        });
-
-        $("#text").keydown(function () {
-            if (event.keyCode == "13") {//keyCode=13是回车键
-                $('#search').click();
-            }
-        });
-    });
-    function urldecode(data) {
-        return decodeURIComponent(data);
-    }
-    function search() {
-        $
-                .ajax({
-                    url: "search.do?name=" + $('#text').val(),
-                    type: "get",
-                    dataType: "json",
-                    beforeSend: function () {
-                        $('#list').css('display', 'block');
-                        $('#info').html('正在请求数据。。');
-                    },
-                    success: function (data, status) {
-                        $('#info').html('');
-                        console.log(data);
-                        $("#list").css('display', 'block');
-                        $
-                                .each(
-                                data,
-                                function (i, item) {
-                                    console.log(item);
-                                    if (item.description == undefined) {
-                                        item.description = ""
-                                    }
-                                    $(
-                                                    '<div style="col-xs-12">'
-                                                    + '<h2>'
-                                                    + urldecode(item.name)
-                                                    + ' </h2>'
-                                                    + '<a target="_blank" href="'
-                                                    + urldecode(item.filmUrl)
-                                                    + '"<h4>'
-                                                    + urldecode(item.filmUrl)
-                                                    + ' </h4></a><p>'
-                                                    + item.description
-                                                    + '</p></div>')
-                                            .appendTo('#result');
-                                });
-                    },
-                    error: function () {
-                        console.log("error");
-                        $('#list').css('display', 'none');
-                        $('#result').html('failed');
-                    }
-                });
-    }
-</script>
+			$("#text").keydown(function() {
+				if (event.keyCode == "13") {//keyCode=13是回车键
+					$('#search').click();
+				}
+			});
+		});
+		function urldecode(data) {
+			return decodeURIComponent(data);
+		}
+		function search() {
+			$.ajax({
+				url : "search.do?name=" + $('#text').val(),
+				type : "get",
+				dataType : "json",
+				beforeSend : function() {
+					$('#list').css('display', 'block');
+					$('#info').html('正在请求数据。。');
+				},
+				success : function(data, status) {
+					$('#info').html('');
+					console.log(data);
+					$("#list").css('display', 'block');
+					$.each(data, function(i, item) {
+						console.log(item);
+						if (item.description == undefined) {
+							item.description = ""
+						}
+						$(
+								'<div style="col-xs-12">' + '<h2>'
+										+ urldecode(item.name) + ' </h2>'
+										+ '<a target="_blank" href="'
+										+ urldecode(item.filmUrl) + '"<h4>'
+										+ urldecode(item.filmUrl)
+										+ ' </h4></a><p>' + item.description
+										+ '</p></div>').appendTo('#result');
+					});
+				},
+				error : function() {
+					console.log("error");
+					$('#list').css('display', 'none');
+					$('#result').html('failed');
+				}
+			});
+		}
+	</script>
 </body>
 </html>
