--- a/WebRoot/signup.html
+++ b/WebRoot/signup.html
@@ -1,4 +1,4 @@
-<form id="sign" action="addUser" method="post" style="position: absolute;top: 100px;left:50%;margin-left:30px;width: 50%;opacity: 0">
+<form id="sign" action="addUser.do" method="post" style="position: absolute;top: 100px;left:50%;margin-left:30px;width: 50%;opacity: 0">
     <fieldset>
         <legend>用户注册</legend>
         <div class="form-group">
