--- a/WebRoot/update.html
+++ b/WebRoot/update.html
@@ -59,7 +59,7 @@
                         <span class="text-danger" id="update-film-name-error" style="display: none">电影应该在5-15位之间</span>
                         <input type="text" id="update-film-name"
                                name="name" placeholder="请输入电影名称"
-                               class="form-control" required="true">
+                               class="form-control" required="required">
                     </div>
                     <div class="form-group">
                         <label for="update-film-desc">描述:</label>
@@ -71,26 +71,26 @@
                         <label for="update-film-url">地址:</label>
                         <input type="url" id="update-film-url" name="url" class="form-control" placeholder="请输入链接地址"
                                value="http://"
-                               required="true">
+                               required="required">
                     </div>
                     <div class="form-group">
                         <label for="update-film-director">导演:</label>
                         <span class="text-danger" id="update-film-director-error" style="display: none">名字不正确</span>
-                        <input type="text" id="update-film-director" name="directpr" class="form-control"
+                        <input type="text" id="update-film-director" name="director" class="form-control"
                                placeholder="请输入导演名字"
-                               required="true">
+                               required="required">
                     </div>
                     <div class="form-group">
                         <label for="update-film-watch">观看地址:</label>
                         <span class="text-danger" id="update-film-watch-error" style="display: none">地址不正确</span>
                         <input type="url" id="update-film-watch" name="watch" class="form-control" placeholder="请输入观看地址"
-                               required="true">
+                               required="required">
                     </div>
                     <div class="form-group">
                         <label for="update-film-date">上映时间:</label>
                         <span class="text-danger" id="update-film-date-error" style="display: none">时间格式不正确</span>
                         <input type="date" id="update-film-date" name="date" class="form-control" placeholder="请输入上映时间"
-                               required="true">
+                               required="required">
                     </div>
                     <br/>
 
