--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,p,div,legend {
 		</div>
 	</div>
 	<footer style="text-align: center;">
-		<p>&copy; 白强 2014.All rights reserved</p>
+		<p>&copy; 电影搜索 2014.All rights reserved</p>
 	</footer>
 	<!-- Modal -->
 	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog"
