--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -180,9 +180,9 @@ body,h1,h2,h3,h4,p,div,legend {
 							item.description = ""
 						}
 						$(
-								'<div style="col-xs-12">' + '<h2>'
+								'<div style="col-xs-12">' + '<h2 style="color:#227DC5">'
 										+ urldecode(item.name) + ' </h2>'
-										+ '<a target="_blank" href="'
+										+ '<a style="color:red" target="_blank" href="'
 										+ urldecode(item.filmUrl) + '"<h4>'
 										+ urldecode(item.filmUrl)
 										+ ' </h4></a><p>' + item.description
