--- a/WebRoot/admin.html
+++ b/WebRoot/admin.html
@@ -1,53 +1,54 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>管理员登录</title>
-    <meta charset="utf-8">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <style>
-        body, h1, h2, h3, h4, p, div, legend {
-            font-family: "微软雅黑";
-        }
-    </style>
-    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+<title>管理员登录</title>
+<meta charset="utf-8">
+<link href="css/bootstrap.css" rel="stylesheet">
+<style>
+body,h1,h2,h3,h4,p,div,legend {
+	font-family: "微软雅黑";
+}
+</style>
+<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 
 <body style="background: #dcddcd">
-<div class="navbar navbar-fixed-top"
-     style="background:rgba(255, 255, 255, 0.5)">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <h2><a href="index.html">管理员登录</a></h2>
-            </div>
+	<div class="navbar navbar-fixed-top"
+		style="background:rgba(255, 255, 255, 0.5)">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<h2>
+						<a href="index.html">管理员登录</a>
+					</h2>
+				</div>
 
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="col-xs-12" id="page">
-        <div class="container" style="position:absolute;margin-top: 100px;min-height: 550px;left: 200px;width: 50%"
-             id="main">
-            <form action="adminLogin">
-                <input type="text" class="form-control" id="username" placeholder="用户名">
-
-                <input type="password" class="form-control" id="password" placeholder="密码" required="true">
-
-                <input type="submit" class="form-control btn btn-default btn-block" id="submit" value="登录">
-            </form>
-        </div>
-    </div>
-</div>
-<footer style="text-align: center;position: absolute;top: 100%;left: 49%">
-    <p>&copy; 电影搜索 2014.All rights reserved</p>
-</footer>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#login").click(function () {
-
-        });
-    });
-</script>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="col-xs-12" id="page">
+			<div class="container"
+				style="position:absolute;margin-top: 100px;min-height: 550px;left: 200px;width: 50%"
+				id="main">
+				<form action="adminLogin.do" method="post">
+					<input type="text" class="form-control" id="username"
+						name="username" placeholder="用户名"> <input type="password"
+						name="password" class="form-control" id="password"
+						placeholder="密码" required="required"> <input type="submit"
+						class="form-control btn btn-default btn-block" id="submit"
+						value="登录">
+				</form>
+			</div>
+		</div>
+	</div>
+	<footer
+		style="text-align: center;position: absolute;top: 100%;left: 49%">
+		<p>&copy; 电影搜索 2014.All rights reserved</p>
+	</footer>
+	<script type="text/javascript">
+		
+	</script>
 </body>
 </html>
