--- a/WebRoot/manage.html
+++ b/WebRoot/manage.html
@@ -40,7 +40,7 @@
 <div class="container">
     <div class="col-xs-12" id="page" style="position: relative">
         <div class="container" style="position:relative;margin-top: 70px;min-height:600px;" id="main">
-            <table class="table table-hover table-bordered" id="table">
+            <table class="table table-hover table-bordered table-condensed" id="table">
                 <tr>
                     <th>名称</th>
                     <th>描述</th>
@@ -53,28 +53,28 @@
                     <td>成功在美国立足的青年林一（林更新 饰）收到了初恋女友周小栀（周冬雨 饰）寄来的结婚请帖，百感交集的林一准备回国…</td>
                     <td>白强</td>
                     <td>www.douban.com</td>
-                    <td><a>通过</a>|<a>删除</a></td>
+                    <td><a>通过</a></td>
                 </tr>
                 <tr>
                     <td>电影2</td>
                     <td>成功在美国立足的青年林一（林更新 饰）收到了初恋女友周小栀（周冬雨 饰）寄来的结婚请帖，百感交集的林一准备回国…</td>
                     <td>白强</td>
                     <td>www.douban.com</td>
-                    <td><a>通过</a>|<a>删除</a></td>
+                    <td><a>通过</a></td>
                 </tr>
                 <tr>
                     <td>电影3</td>
                     <td>成功在美国立足的青年林一（林更新 饰）收到了初恋女友周小栀（周冬雨 饰）寄来的结婚请帖，百感交集的林一准备回国…</td>
                     <td>白强</td>
                     <td>www.douban.com</td>
-                    <td><a>通过</a>|<a>删除</a></td>
+                    <td><a>通过</a></td>
                 </tr>
                 <tr>
                     <td>电影4</td>
                     <td>成功在美国立足的青年林一（林更新 饰）收到了初恋女友周小栀（周冬雨 饰）寄来的结婚请帖，百感交集的林一准备回国…</td>
                     <td>白强</td>
                     <td>www.douban.com</td>
-                    <td><a>通过</a>|<a>删除</a></td>
+                    <td><a>通过</a></td>
                 </tr>
             </table>
             <ul class="pagination">
@@ -92,5 +92,19 @@
 <footer style="text-align: center;">
     <p>&copy; 电影搜索 2014.All rights reserved</p>
 </footer>
+<script type="text/javascript">
+    $(function() {
+        $("#table").click(function(e) {
+            var target= e.target;
+            if(target.nodeName=='A'){
+                console.log(e.target.innerHTML);
+                e.target.innerHTML="已通过";
+                console.log(e.target.href);
+                e.target.className+='btn btn-sm disabled';
+            }
+            e.preventDefault();
+        });
+    });
+</script>
 </body>
 </html>
